# tribe-playground

./: .gitignore  Cargo.toml  convert_brain.py  convert_ckpt.py  download_clip.py  download_llama.py  download_w2v.py  inference_server.py  setup.sh  tribe-v2-playground.html
.playwright-mcp/: page-2026-04-12T13-19-53-320Z.yml  page-2026-04-12T13-19-58-486Z.yml  page-2026-04-12T13-20-04-470Z.yml  page-2026-04-12T13-20-32-213Z.yml  page-2026-04-12T13-20-47-268Z.yml  page-2026-04-12T13-20-53-751Z.yml  page-2026-04-12T13-20-59-600Z.yml  page-2026-04-12T13-57-11-914Z.yml  page-2026-04-12T14-01-59-197Z.yml
.superpowers/brainstorm/30086-1775396010/content/: approaches.html
.superpowers/brainstorm/30086-1775396010/state/: server-stopped
.superpowers/brainstorm/93406-1775988328/content/: full-mock.html  input-bar-v2.html  input-bar.html  layout.html  waiting.html
.superpowers/brainstorm/93406-1775988328/state/: server-stopped
docs/superpowers/plans/: 2026-04-12-rust-server-migration.md  2026-04-12-tribe-fix-and-showcase.md  2026-04-12-tribe-ui-redesign.md
docs/superpowers/specs/: 2026-04-12-rust-server-migration-design.md  2026-04-12-tribe-ui-redesign-design.md
tribe-downloader/: Cargo.toml
tribe-downloader/src/: audio.rs  clip_encoder.rs  downloader.rs  features.rs  fmri_encoder.rs  handlers.rs  jobs.rs  llama_encoder.rs  main.rs  wav2vec2bert.rs
