[package]
name = "tribe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# ML framework (pure Rust, no libtorch required)
candle-core = { version = "0.8", features = ["metal", "accelerate"] }
candle-nn   = { version = "0.8", features = ["accelerate"] }
safetensors = "0.4"

# HuggingFace model hub
hf-hub = { version = "0.3", features = ["tokio"] }

# Async runtime + HTTP
tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.7", features = ["ws"] }
tower-http   = { version = "0.5",  features = ["fs", "cors"] }
reqwest      = { version = "0.12", features = ["json", "stream"] }

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"

# Job IDs
uuid         = { version = "1", features = ["v4", "serde"] }

# Streaming download helper
futures-util = "0.3"

# Audio decoding (MP3, WAV, FLAC, OGG, M4A …)
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }

# FFT for mel-spectrogram
rustfft = "6"

# Base64 (audio upload)
base64 = "0.22"

# Hash-based demo text features (fallback)
sha2 = "0.10"

# LLaMA-3.2-3B text encoder
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }

# Image decoding for CLIP encoder
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
